--- a/Web/GreenCap.Web/Views/Events/All.cshtml
+++ b/Web/GreenCap.Web/Views/Events/All.cshtml
@@ -34,16 +34,15 @@
             </div>
             <p class="text-center text-dark">@eventModel.NeededPeople left</p>
         </div>
-        <li class="list-group-item">Hosted by: @eventModel.HostedByName</li>
+        <li class="list-group-item">Hosted by: </li>
         <li class="list-group-item">Sign in users: names</li>
     </ul>
     <div class="card-body" id="@eventModel.Id">
         <a href="#" class="card-link" data-vote="1">Join</a>
         <a href="#" class="card-link" data-vote="0">Cancel</a>
-        @if (eventModel.UserEmail == this.User.Identity.Name)
-        {
+        
                 <a href="#" class="card-link">Edit</a>
-                <a href="#" class="card-link">Delete</a>}
+                <a href="#" class="card-link">Delete</a>
     </div>
     <div class="card-footer text-muted text-left">
         created @eventModel.CretedDaysAgo
