--- a/Web/GreenCap.Web/Views/Events/Create.cshtml
+++ b/Web/GreenCap.Web/Views/Events/Create.cshtml
@@ -42,6 +42,12 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="CreatorsNames"></label>
+                <textarea asp-for="CreatorsNames" class="form-control" rows="2" placeholder="Separate with space, comma or slash other hosts names "></textarea>
+                <span asp-validation-for="CreatorsNames" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Description"></label>
                 <textarea asp-for="Description" class="form-control" rows="3" placeholder="Share in details about the event."></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
