functionality for many hosts users- fixed

--- a/Web/GreenCap.Web/Views/Events/All.cshtml
+++ b/Web/GreenCap.Web/Views/Events/All.cshtml
@@ -34,7 +34,7 @@
             </div>
             <p class="text-center text-dark">@eventModel.NeededPeople left</p>
         </div>
-        <li class="list-group-item">Hosted by: </li>
+        <li class="list-group-item">Hosted by: @eventModel.HostedByNames</li>
         <li class="list-group-item">Sign in users: names</li>
     </ul>
     <div class="card-body" id="@eventModel.Id">
