--- a/Web/GreenCap.Web/Views/Events/All.cshtml
+++ b/Web/GreenCap.Web/Views/Events/All.cshtml
@@ -4,12 +4,12 @@
 
 @{ this.ViewData["Title"] = "All events " + Model.PageNumber; }
 
-<div class="jumbotron bg-gradient-info">
+<div class="jumbotron bg-gradient-success">
 
     @if (Model.PageNumber == 1)
     {
         <div class="jumbotron bg-dark">
-            <h1 class="display-3 text-primary text-center">Take a part in events happining around you!</h1>
+            <h1 class="display-3 text-primary text-center">Take a part in events happening around you!</h1>
         </div>}
     @foreach (var eventModel in this.Model.Events)
     {
@@ -25,21 +25,27 @@
         <p class="card-text text-light">@eventModel.Description</p>
     </div>
     <ul class="list-group list-group-flush text-left text-info">
-        <li class="list-group-item">Total needed people: @eventModel.TotalPeople</li>
-        <div class="container bg-gradient-success">
+        <li class="list-group-item text-center">Total needed people: @eventModel.TotalPeople</li>
+        <div class="container bg-gradient-info">
             <p class="float-right text-dark">100%</p>
             <p class="text-dark">0%</p>
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" aria-valuenow="@eventModel.NeededPeople" aria-valuemin="0" aria-valuemax="@eventModel.TotalPeople" style="width: @(@eventModel.TotalPeople-@eventModel.NeededPeople)"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: @((eventModel.TotalPeople-eventModel.NeededPeople)*(100/eventModel.TotalPeople))%" aria-valuenow="@((eventModel.TotalPeople-eventModel.NeededPeople)*(100/eventModel.TotalPeople))" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-center text-dark">@eventModel.NeededPeople left</p>
+            @if (eventModel.NeededPeople >= 0)
+            {
+                <p class="text-center text-dark">@eventModel.NeededPeople left</p>
+            }else
+            {
+                <p class="text-center text-dark">@Math.Abs(eventModel.NeededPeople) extra</p>
+            }
         </div>
-        <li class="list-group-item">Hosted by: @eventModel.HostedByNames</li>
-        <li class="list-group-item">Sign in users: names</li>
+        <li class="list-group-item">Hosted by: <p class="text-muted">@eventModel.HostedByNames</p></li>
+        <li class="list-group-item">Sign in users: <p class="text-muted">@eventModel.SignedInByNames </p> </li>
     </ul>
     <div class="card-body" id="@eventModel.Id">
-        <button class="btn btn-success btn-lg m-1 float-left">Join</button>
-        <button class="btn btn-warning btn-lg m-1 float-left">Cancel</button>
+        <a class="btn btn-success btn-lg float-left m-2" href="/Events/Join?id=@eventModel.Id" role="button">Join</a>
+        <a class="btn btn-warning btn-lg float-left m-2" href="/Events/Cancel?id=@eventModel.Id" role="button">Cancel</a>
         <form method="post" class=" m-1" asp-controller="Events" asp-action="Delete" id="deleteForm" asp-route-id="@eventModel.Id">
             <button class="btn btn-danger btn-lg m-1 float-right" data-toggle="modal" data-target="#deleteModal">Delete</button>
         </form>
@@ -52,31 +58,3 @@
 </div>
 
 <partial name="_PagingPartial" model="@Model" />
-
-@section Scripts
-{
-    <script>
-        $("a[data-vote]").each(function (el) {
-            $(this).click(function () {
-
-                var isJoin = Boolean(parseInt($(this).attr("data-vote")));
-                var eventId = parseInt(this.parentElement.getAttribute("id"));
-                console.log(eventId);
-
-                $.ajax({
-                    type: "POST",
-                    url: "/api/",
-                    data: JSON.stringify(data),
-                    headers: {
-                        'X-CSRF-TOKEN': antiForgeryToken
-                    },
-                    success: function (data) {
-                        $('#disslikesValue_' + postId).html(data.dissLikes);
-                        $('#likesValue_' + postId).html(data.likes);
-                    },
-                    contentType: 'application/json',
-                });
-            })
-        });
-    </script>
-}
