--- a/Web/GreenCap.Web/Areas/Administration/Views/Dashboard/Index.cshtml
+++ b/Web/GreenCap.Web/Areas/Administration/Views/Dashboard/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model GreenCap.Web.ViewModels.Administration.Dashboard.IndexViewModel
 @{
-    this.ViewData["Title"] = "Admin dashboard";
+    this.ViewData["Title"] = "Dashboard is comming soon...";
 }
 
-<h1>@this.ViewData["Title"]</h1>
-Settings: @this.Model.SettingsCount
+<div class="jumbotron">
+    <h1 class="text-center text-primary display-3">@ViewData["Title"]</h1>
+</div>
