--- a/Web/GreenCap.Web/Areas/Administration/Views/Events/Create.cshtml
+++ b/Web/GreenCap.Web/Areas/Administration/Views/Events/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model GreenCap.Data.Models.Proposal
+﻿@model GreenCap.Data.Models.Event
 
 @{
-    ViewData["Title"] = "Create proposal, Admin view";
+    ViewData["Title"] = "Create event, Admin view";
 }
 
 <div class="jumbotron">
@@ -14,9 +14,9 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Title" class="control-label"></label>
-                    <input asp-for="Title" class="form-control" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Description" class="control-label"></label>
@@ -24,13 +24,24 @@
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ShortDescription" class="control-label"></label>
-                    <input asp-for="ShortDescription" class="form-control" />
-                    <span asp-validation-for="ShortDescription" class="text-danger"></span>
+                    <label asp-for="ImagePath" class="control-label"></label>
+                    <input asp-for="ImagePath" class="form-control" />
+                    <span asp-validation-for="ImagePath" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="CreatedById" class="control-label"></label>
-                    <select asp-for="CreatedById" class="form-control" asp-items="ViewBag.CreatedById"></select>
+                    <label asp-for="StartDate" class="control-label"></label>
+                    <input asp-for="StartDate" class="form-control" />
+                    <span asp-validation-for="StartDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="EndDate" class="control-label"></label>
+                    <input asp-for="EndDate" class="form-control" />
+                    <span asp-validation-for="EndDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TotalPeople" class="control-label"></label>
+                    <input asp-for="TotalPeople" class="form-control" />
+                    <span asp-validation-for="TotalPeople" class="text-danger"></span>
                 </div>
                 <div class="form-group form-check">
                     <label class="form-check-label">
@@ -58,12 +69,12 @@
             </form>
         </div>
     </div>
-</div>
+    </div>
 
 <div>
     <a class="btn btn-info btn-lg m-2" asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
