--- a/Web/GreenCap.Web/Areas/Administration/Views/Events/Edit.cshtml
+++ b/Web/GreenCap.Web/Areas/Administration/Views/Events/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model GreenCap.Data.Models.Proposal
+﻿@model GreenCap.Data.Models.Event
 
 @{
-    ViewData["Title"] = "Create proposal, Admin view";
+    ViewData["Title"] = "Edit event, Admin view";
 }
 
 <div class="jumbotron">
@@ -11,12 +11,12 @@
 <div class="container bg-gradient-info text-dark">
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create">
+            <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Title" class="control-label"></label>
-                    <input asp-for="Title" class="form-control" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Description" class="control-label"></label>
@@ -24,13 +24,24 @@
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ShortDescription" class="control-label"></label>
-                    <input asp-for="ShortDescription" class="form-control" />
-                    <span asp-validation-for="ShortDescription" class="text-danger"></span>
+                    <label asp-for="ImagePath" class="control-label"></label>
+                    <input asp-for="ImagePath" class="form-control" />
+                    <span asp-validation-for="ImagePath" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="CreatedById" class="control-label"></label>
-                    <select asp-for="CreatedById" class="form-control" asp-items="ViewBag.CreatedById"></select>
+                    <label asp-for="StartDate" class="control-label"></label>
+                    <input asp-for="StartDate" class="form-control" />
+                    <span asp-validation-for="StartDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="EndDate" class="control-label"></label>
+                    <input asp-for="EndDate" class="form-control" />
+                    <span asp-validation-for="EndDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TotalPeople" class="control-label"></label>
+                    <input asp-for="TotalPeople" class="form-control" />
+                    <span asp-validation-for="TotalPeople" class="text-danger"></span>
                 </div>
                 <div class="form-group form-check">
                     <label class="form-check-label">
@@ -42,6 +53,7 @@
                     <input asp-for="DeletedOn" class="form-control" />
                     <span asp-validation-for="DeletedOn" class="text-danger"></span>
                 </div>
+                <input type="hidden" asp-for="Id" />
                 <div class="form-group">
                     <label asp-for="CreatedOn" class="control-label"></label>
                     <input asp-for="CreatedOn" class="form-control" />
@@ -53,17 +65,15 @@
                     <span asp-validation-for="ModifiedOn" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-dark" />
+                    <input type="submit" value="Save" class="btn btn-dark" />
                 </div>
             </form>
         </div>
     </div>
-</div>
+    </div>
 
-<div>
-    <a class="btn btn-info btn-lg m-2" asp-action="Index">Back to List</a>
-</div>
+<a class="btn btn-info btn-lg m-2" asp-action="Index">Back to List</a>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
