--- a/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                                     <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="All"><i class="fas fa-globe"></i>&ensp; View all</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new event</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#"><i class="far fa-calendar-check"></i>&ensp; Donate</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="Donate"><i class="far fa-calendar-check"></i>&ensp; Donate</a>
                                 </div>
                             </li>                            
                         }else
