fix time for events, small changes

--- a/src/Web/GreenCap.Web/Views/Events/Donate.cshtml
+++ b/src/Web/GreenCap.Web/Views/Events/Donate.cshtml
@@ -1,4 +1,4 @@
-﻿@{ this.ViewData["Title"] = "Donations for causes or events are comming soon..."; }
+﻿@{ this.ViewData["Title"] = "Donations are comming soon..."; }
 
 <div class="jumbotron">
     <h1 class="text-center text-primary display-3">@ViewData["Title"]</h1>
