--- a/src/Web/GreenCap.Web/Views/Events/All.cshtml
+++ b/src/Web/GreenCap.Web/Views/Events/All.cshtml
@@ -67,7 +67,7 @@
         </div>
     }
     <div class="card-footer text-muted text-left">
-        created @eventModel.CretedDaysAgo
+        @eventModel.CretedDaysAgo
     </div>
 </div>}
 </div>
